error_v6.log
    Checking uci v0.1.0 (C:\Users\denil\Desktop\uci)
error[E0525]: expected a closure that implements the `FnMut` trait, but this closure only implements `FnOnce`
    --> src\frontend\patient_form.rs:46:21
     |
  46 |     let on_submit = move |ev: leptos::ev::SubmitEvent| {
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this closure implements `FnOnce`, not `FnMut`
...
  95 |                                 navigate("/patients", Default::default());
     |                                 -------- closure is `FnOnce` because it moves the variable `navigate` out of its environment
...
 128 |             <form on:submit=on_submit class="space-y-8">
     |                   --        --------- the requirement to implement `FnMut` derives from here
     |                   |
     |                   required by a bound introduced by this call
     |
note: required by a bound in `leptos::HtmlElement::<El>::on`
    --> C:\Users\denil\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos_dom-0.6.15\src\html.rs:1139:33
     |
1135 |     pub fn on<E: EventDescriptor + 'static>(
     |            -- required by a bound in this associated function
...
1139 |         mut event_handler: impl FnMut(E::EventType) + 'static,
     |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::on`

For more information about this error, try `rustc --explain E0525`.
error: could not compile `uci` (lib) due to 1 previous error
